Change title of Contact

--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
   </ul>
 </nav>
 </header>
-  <h1>Contact</h1>
+  <h1>Contact Idowu Adesina</h1>
   <div>
     <br>c/Gaztambide 44
     <br>28015, Madrid
