--- a/index.html
+++ b/index.html
@@ -2,40 +2,42 @@
 <html lang="en" dir="ltr">
 <head>
   <meta charset="utf-8">
-  <title>Idowu's portfolio</title>
+  <title>My Portfolio</title>
 </head>
 <body>
   <header>
-  <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="logo" >
-<nav>
-  <ul>
-    <li><a href="index/html">Home</a></li>
-    <li><a href="about.html">About</a></li>
-    <li><a href="contact.html">Contact</a></li>
-  </ul>
-</nav>
+  <div>
+    <a href="index.html">Idowu Adesina</a>
+  </div>
+  <nav>
+    <ul>
+      <li><a href="index.html">Work</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
 </header>
   <h1>Hi, my name is Idowu Adesina. <span>I am a UX Designer based in Madrid!</span></h1>
 
   <div><!--this will be the container that “contains” the 4 columns-->
     <div><!-- this will be the first column-->
-      <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="Work Sample 1" >
-      <h2>Work Sample 1</h2>
+      <img src="img/InkTank.jpg" alt="InkTank" >
+      <h2>InkTank - A UX/UI Design Case Study</h2>
     </div><!-- this will end the first column-->
 
     <div><!-- this will be the second column-->
-      <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="Work Sample 2" >
-      <h2>Work Sample 2</h2>
+      <img src="img/Swaze.jpg" alt="Swaze">
+      <h2>Swaze - A UX Design Project</h2>
     </div><!-- this will end the second column-->
 
     <div><!-- this will be the third column-->
-      <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="Work Sample 3" >
-      <h2>Work Sample 3</h2>
+      <img src="img/IDEO.jpg" alt="IDEO">
+      <h2>An IDEO Social Innovation Design Project</h2>
     </div><!-- this will end the third column-->
 
     <div><!-- this will be the fourth column-->
-      <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="Work Sample 4" >
-      <h2>Work Sample 4</h2>
+      <img src="img/Adobe.jpg" alt="Adobe">
+      <h2>Adobe XD Design Challenge</h2>
     </div><!-- this will end the fourth column-->
   </div><!-- this will close the container-->
 </body>
