--- a/about.html
+++ b/about.html
@@ -2,19 +2,30 @@
 <html lang="en" dir="ltr">
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>My Portfolio</title>
 </head>
 <body>
-  <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="logo" >
-<header>
-<nav>
-  <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="about.html">About</a></li>
-    <li><a href="contact.html">Contact</a></li>
-  </ul>
-</nav>
+  <div>
+    <a href="index.html">Idowu Adesina</a>
+  </div>
+  <header>
+  <nav>
+    <ul>
+      <li><a href="index.html">Work</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
+  <img src="img/Pix.jpg" alt="Pix" >
 </header>
-  <h1>About</h1>
+  <h1>About Me</h1>
+  <p>After years of applying my knowledge in Psychology to create product strategies and messaging in Advertising, I chose to hone my business acumen
+     working with tech startups expand into international markets. Throughout this journey, I have identified that the constant, the users, must
+     remain the focal point for the desired product and financial outcome. This is why I have developed skills in UX Design.</p>
+  <p>At the confluence of technology, business and psychology lies the core of my superpowers - designing user-centered solutions that align with
+    business requirements, and meet human needs! Nothing gives me more joy than helping people focus on what really matters.</p>
+  <p>I live for experiences in whichever form they come – knowledge, places, music, food, people, culture – you name it, I take it all in.
+    Did I mention that I can live without M&Ms? That’s right, Music and Movies! They complete me.</p>
+    <h2>Let's chat</h2>
 </body>
 </html>
