--- a/about.html
+++ b/about.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+  <style>
+  body {background-color: Lightgrey;}
+  body {font-family: 'Lato', sans-serif;}
+    </style>
   <meta charset="utf-8">
-  <title>My Portfolio</title>
+  <title>About Me - Idowu Adesina</title>
 </head>
 <body>
   <div>
