Adjusted Navigation structure, header and content + styling indicators

--- a/about.html
+++ b/about.html
@@ -1,45 +1,52 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-  <style>
-  body {background-color: Lightgrey;}
-  body {font-family: 'Lato', sans-serif;}
-    </style>
   <meta charset="utf-8">
   <title>About Me - Idowu Adesina</title>
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Lobster|Lato:400,600,700" rel="stylesheet">
 </head>
 <body>
-  <div>
-    <a href="index.html">Idowu Adesina</a>
-  </div>
   <header>
-    <nav>
-      <ul>
-        <li><a href="index.html">Work</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
+    <div class="container">
+      <div class="logo">
+        <a href="index.html">Idowu Adesina</a>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="index.html">Work</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
-  <div>
+  <!-- Hero section -->
+  <section class="hero">
+    <div class="container">
+      <h1>About Me</h1>
+    </div>
+  </section>
+  <div class="container">
     <img src="img/Pix.jpg" alt="Pix" >
   </div>
-  <h1>About Me</h1>
-  <p>
-    After years of applying my knowledge in Psychology to create product strategies and messaging in Advertising, I chose to hone my business acumen
-    working with tech startups expand into international markets. Throughout this journey, I have identified that the constant, the users, must
-    remain the focal point for the desired product and financial outcome. This is why I have developed skills in UX Design.
-  </p>
-  <p>
-    At the confluence of technology, business and psychology lies the core of my superpowers - designing user-centered solutions that align with
-    business requirements, and meet human needs! Nothing gives me more joy than helping people focus on what really matters.
-  </p>
-  <p>
-    I live for experiences in whichever form they come – knowledge, places, music, food, people, culture – you name it, I take it all in.
-    Did I mention that I can live without M&Ms? That’s right, Music and Movies! They complete me.
-  </p>
-  <a href="contact.html">Get in touch!</a>
+  <div class="container">
+    <p>
+      After years of applying my knowledge in Psychology to create product strategies and messaging in Advertising, I chose to hone my business acumen
+      working with tech startups expand into international markets. Throughout this journey, I identified the importance of having users
+      at the focal point of product design and development to achieve business objectives. To improve on my knowledge, I have gained knowledge in the
+      areas of User Experience (UX) Design, User Interface (UI) Design and Front-end Development.
+    </p>
+    <p>
+      At the confluence of technology, business and psychology lies the core of my superpowers - designing user-centered solutions that align with
+      business requirements, and meet human needs! Nothing gives me more joy than helping people focus on what really matters.
+    </p>
+    <p>
+      I live for experiences in whichever form they come – knowledge, places, music, food, people, culture – you name it, I take it all in.
+      Did I mention that I can live without M&Ms? That’s right, Music and Movies! They complete me.
+    </p>
+    <a class="button" href="contact.html">Get in touch!</a>
+  </div>
 </body>
 </html>
