Added new paragraph

--- a/about.html
+++ b/about.html
@@ -47,6 +47,15 @@
       I live for experiences in whichever form they come – knowledge, places, music, food, people, culture – you name it, I take it all in.
       Did I mention that I can live without M&Ms? That’s right, Music and Movies! They complete me.
     </p>
+    <p>
+      Do you want to know more about me? Click the link below to see my experience or better, contact me.
+    </p>
+    <p>
+      I can't wait to hear from you.
+    </p>
+  </div>
+  <div class="container">
+    <a class="button download-button" download href="files/Idowu-cv.pdf">Download my CV</a>
     <a class="button" href="contact.html">Get in touch!</a>
   </div>
 </body>
