Adjusted Nav Animation

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
         <a href="index.html">Idowu Adesina</a>
       </div>
         <nav>
-        <ul>
+        <ul class="borderXwidth">
           <li><a href="index.html">Work</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="contact.html">Contact</a></li>
@@ -58,8 +58,8 @@
     <a class="button download-button" href="files/Idowu-cv.pdf">View my CV</a>
     <a class="button" href="contact.html">Get in touch!</a>
   </div>
-  <div class="container svg">
-    <svg xmlns="http://www.w3.org/2000/svg" class="berlin-illustration" height="505" viewBox="0 0 700 505" xmlns:xlink="http://www.w3.org/1999/xlink">
+  <div class="container center">
+    <svg xmlns="http://www.w3.org/2000/svg" class="berlin-illustration" viewBox="0 0 700 505" xmlns:xlink="http://www.w3.org/1999/xlink">
       <defs>
           <polygon id="a" points=".06 231.917 .06 .929 688.717 .929 688.717 231.917" />
       </defs>
