--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
         <a href="index.html">Idowu Adesina</a>
       </div>
       <nav>
-        <ul>
+        <ul class="borderXwidth">
           <li><a href="index.html">Work</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="contact.html">Contact</a></li>
