--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Idowu Adesina | UX Designer</title>
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
-  <link href="https://fonts.googleapis.com/css?family=Lobster|Lato:400,600,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lobster.Lato:400,600,700" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 <body>
@@ -68,4 +68,5 @@
   </section>
   <script src="js/scripts.js"></script>
 </body>
+
 </html>
