--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
   <title>About Me - Idowu Adesina</title>
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
-  <link href="https://fonts.googleapis.com/css?family=Lobster|Lato:400,600,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lobster.Lato:400,600,700" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 <body>
@@ -27,7 +27,7 @@
   <!-- Hero section -->
   <section class="hero">
     <div class="container">
-      <h1>About Me</h1>
+      <h1>About Idowu</h1>
     </div>
   </section>
   <div class="container">
